team assigner update

--- a/team_assigner/color_assignement.ipynb
+++ b/team_assigner/color_assignement.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -64,15 +64,15 @@
     "top_half_rgb = cv2.cvtColor(top_half, cv2.COLOR_BGR2RGB)\n",
     "print(f\"Top half shape: {top_half.shape}\")\n",
     "\n",
-    "# ✅ 1, 2 이미지를 한 figure에 나란히 표시\n",
+    "# 1, 2 이미지를 한 figure에 나란히 표시\n",
     "fig, axes = plt.subplots(1, 2, figsize=(12, 6))\n",
     "\n",
-    "# 1️⃣ 원본 이미지\n",
+    "# 원본 이미지\n",
     "axes[0].imshow(image_rgb)\n",
     "axes[0].set_title('(a) Original Image')\n",
     "axes[0].axis('off')\n",
     "\n",
-    "# 2️⃣ 상반부(top half)\n",
+    "# 상반부(top half)\n",
     "axes[1].imshow(top_half_rgb)\n",
     "axes[1].set_title('(b) Top Half')\n",
     "axes[1].axis('off')\n",
